\w -> <c-w> for vim window operate; <space>c conflic: CocList commands X  Leaderf command

--- a/supervim/plugins-available/coc.nvim/config
+++ b/supervim/plugins-available/coc.nvim/config
@@ -152,7 +152,7 @@ nnoremap <silent> <space>a  :<C-u>CocList diagnostics<cr>
 " Manage extensions.
 nnoremap <silent> <space>e  :<C-u>CocList extensions<cr>
 " Show commands.
-nnoremap <silent> <space>c  :<C-u>CocList commands<cr>
+" nnoremap <silent> <space>c  :<C-u>CocList commands<cr>
 " Find symbol of current document.
 nnoremap <silent> <space>o  :<C-u>CocList outline<cr>
 " Search workspace symbols.
