--- a/tools/rosScripts/config
+++ b/tools/rosScripts/config
@@ -22,5 +22,6 @@ mappings=(
 "tcp|9091|10.1.1.241|9091|dsm transmission"
 "tcp|2000|10.1.1.241|22|dsm ssh"
 "tcp|9006|10.1.1.100|8006|pve web controller"
+"tcp|3389|10.1.1.21||win10 remote desktop"
 )
 
