update bridge name

--- a/tools/rosScripts/config
+++ b/tools/rosScripts/config
@@ -1,6 +1,6 @@
 
 subnet=10.1.1.0/24
-bridge=local
+bridge=br-lan
 wan=pppoe-out1
 dynWanTag=dynWanDNAT
 hairpinTag=HairpinNAT
@@ -16,7 +16,8 @@ mappings=(
 "tcp|26|10.1.1.26|22|mjr ssh"
 "tcp|1281-1282|10.1.1.112||lede socks5 http"
 "tcp|2281|10.1.1.110|1281|router110 socks5"
-"tcp|8000-8030|10.1.1.137||socks http ss"
+"tcp|8000-8030|10.1.1.137||tcp socks http ss"
+"udp|8000-8030|10.1.1.137||udp socks http ss"
 "udp|500,4500,1701|10.1.1.137||ikev2 or l2tp vpn"
 "tcp|6001|10.1.1.241|5001|dsm web"
 "tcp|9091|10.1.1.241|9091|dsm transmission"
