--- a/tools/rosScripts/config
+++ b/tools/rosScripts/config
@@ -14,6 +14,7 @@ hairpinTag=HairpinNAT
 
 mappings=(
 "tcp|26|10.1.1.26|22|mjr ssh"
+"tcp|137|10.1.1.137|22|d10-server ssh"
 "tcp|1281-1282|10.1.1.112||lede socks5 http"
 "tcp|2281|10.1.1.110|1281|router110 socks5"
 "tcp|8000-8030|10.1.1.137||tcp socks http ss"
