sshconfig();plex port mapping;

--- a/tools/rosScripts/config
+++ b/tools/rosScripts/config
@@ -23,6 +23,7 @@ mappings=(
 "tcp|6001|10.1.1.241|5001|dsm web"
 "tcp|9091|10.1.1.241|9091|dsm transmission"
 "tcp|2000|10.1.1.241|22|dsm ssh"
+"tcp|32400|10.1.1.100|32400|pve plex server"
 "tcp|9006|10.1.1.100|8006|pve web controller"
 "tcp|3389|10.1.1.21||win10 remote desktop"
 )
