--- a/supervim/plugins-available/floaterm/config
+++ b/supervim/plugins-available/floaterm/config
@@ -9,10 +9,10 @@ endif
 
 "let g:floaterm_rootmarkers = ['.project', '.git', '.hg', '.svn', '.root', '.gitignore']
 
-"inoremap <silent> <F7>  <Esc>:FloatermToggle<CR>
-"nnoremap <silent> <F7>  :FloatermToggle<CR>
-"tnoremap <silent> <F7>  <C-\><C-n>:FloatermToggle<CR>
+inoremap <silent> <F7>  <Esc>:FloatermToggle<CR>
+nnoremap <silent> <F7>  :FloatermToggle<CR>
+tnoremap <silent> <F7>  <C-\><C-n>:FloatermToggle<CR>
 
-inoremap <silent> <c-l>7  <Esc>:FloatermToggle<CR>
-nnoremap <silent> <c-l>7  :FloatermToggle<CR>
-tnoremap <silent> <c-l>7  <C-\><C-n>:FloatermToggle<CR>
+"inoremap <silent> <c-l>7  <Esc>:FloatermToggle<CR>
+"nnoremap <silent> <c-l>7  :FloatermToggle<CR>
+"tnoremap <silent> <c-l>7  <C-\><C-n>:FloatermToggle<CR>
